# nvidia-cosmos-dataset-search

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  OSS_SOURCES.txt  README.md  package.json  pyproject.toml  pytest.ini
deploy/standalone/: .env.example  docker-compose.build.yml  embedEtcd.yaml  milvus.yaml  milvus_l40_standalone_optimized.yaml  milvus_localstack.yaml  milvus_official_2_4_4.yaml  readme.md  ui-env-config
deploy/standalone/localstack/init/: create-bucket.sh
deploy/standalone/scripts/: validate_env.sh
docker/base/: python-base.Dockerfile
docker/services/: visual-search.Dockerfile
docs/docs/: api-user-guide.md  api_reference.md  aws-eks-deployment.md  cli-user-guide.md  docker-compose-deployment.md  docker-compose-prerequisites.md  documentation.md  index.rst  introduction.md  openshift-deployment.md  performance.md  troubleshooting-docker-compose.md  troubleshooting-kubernetes.md  troubleshooting.md  ui-user-guide.md  user-guide.md
docs/guides/: api.md  api_reference.md  gpu-memory-management.md  minio-support.md  troubleshooting.md
infra/blueprint/: Chart.yaml  ingest_custom_videos.sh
infra/blueprint/bringup/: Chart.yaml  check_ebs_csi_driver.sh  check_ingress_hostname.sh  check_install_tools.sh  check_pods_status.sh  client_up.sh  cluster_up.sh  configuration.sh  cosmos-embed-override.yaml  cvs.yaml  debug_cosmos_embed.sh  enable_s3.sh  generate_secret_key.py  high-performance-storageclass.yaml  install_cds_cli.sh  k8s_up.sh  make_cluster.sh  milvus-values.yaml  s3_up.sh  secrets.sh  values-openshift.yaml  values.yaml  verify_and_configure_cors.sh  verify_cosmos_embed.sh
infra/blueprint/bringup/ingress/: ingress.yaml
infra/blueprint/bringup/triton-cosmos-embed/: nim-override.yaml
infra/blueprint/bringup/triton-cosmos-embed/infra/: eks-cluster.yaml
infra/blueprint/bringup/visual-search/: values.yaml
infra/blueprint/bringup/visual-search-react-ui/: values.yaml
infra/blueprint/host-setup-docker/: Dockerfile  env_vars_template.sh
infra/blueprint/teardown/: delete_vpc.sh  shutdown_sequence.sh
scripts/: evaluate_accuracy.py  msrvtt_test_100.yaml  prepare_dataset.py  wait_for_services.py
scripts/evals/accuracy/: __init__.py  accuracy_only.py  collection_manager.py  dataset_loader.py  evaluate.py  ingest_only.py  metrics_calculator.py  video_manager.py
scripts/evals/bulk_ingestion_performance/: generate_data.py  run_benchmark.py
scripts/evals/video_ingestion_performance/: http_file_host.py  ingestion.py  latency_test.py  url_ingestion.py
scripts/integration-tools/: clean-volumes.sh
src/: __init__.py
src/haystack/: __init__.py  serializer.py
src/haystack/components/: __init__.py  cdn_utils.py  filtering_models.py  joiners.py  noop.py  nvidia.py  random_embedder.py  rankers.py  routers.py  storage.py
src/haystack/components/image/: clip_embedder.py  image_patching.py
src/haystack/components/linear_probe/: query_learner.py
src/haystack/components/milvus/: __init__.py  document_store.py  document_writer.py  embedding_retriever.py  filter_utils.py  schema_utils.py
src/haystack/components/tests/: joiners_test.py
src/haystack/components/video/: cosmos_video_embedder.py
src/haystack/tests/: serializer_test.py  test_cosmos_all_components.py  test_cosmos_integration.py  test_cosmos_video_embedder.py
src/models/: __init__.py  mdn.py
src/models/aesthetic/: __init__.py  dataset.py  model.py  predict.py  preprocessing.py  train.py
src/models/aesthetic/tests/: dataset_test.py  model_test.py
src/models/linear_classifier/: model.py
src/models/linear_classifier/tests/: model_test.py
src/triton/: __init__.py  triton_python_backend_utils.py
src/triton/model_repository/aesthetic/: client.py  config.pbtxt  model.py
src/triton/protobuf/: grpc_service.proto  model_config.proto
src/visual_search/: __init__.py  config.py  exceptions.py  logger.py  main.py
src/visual_search/client/: README.md  __init__.py  client.py  config.py  default.yaml  io_utils.py
src/visual_search/client/datasets/: msrvtt.yaml  nvclip700m.yaml  simple.yaml
src/visual_search/common/: __init__.py  db_models.py  dependencies.py  exceptions.py  models.py  models_test.py  pipelines.py
src/visual_search/common/apis/: __init__.py  collections.py
src/visual_search/pipelines/: cosmos_video_search_milvus.mustache
src/visual_search/scripts/: run_cosmos_video_integration_test.py  run_integration_test.py  run_integration_test_minimal.py  run_test_cosmos_presigned_urls.py  test_cosmos_embed_service.sh
src/visual_search/tests/: conftest.py  cosmos_video_search_milvus_test.mustache  test_bulk_indexing.py  test_collections.py  test_cosmos_document_indexing.py  test_cosmos_pipeline_config.py  test_curator_parquet_converter.py  test_document_deletion.py  test_k8s_secrets.py  test_nvcf_file_based_secrets_manager.py  test_pipelines.py  test_retrieval.py  test_search_refinement.py
src/visual_search/ui/grafana/: README.md  visual-search.json
src/visual_search/ui/streamlit/: retrieval.py
src/visual_search/v1/: __init__.py  main.py
src/visual_search/v1/apis/: __init__.py  bulk_indexing.py  collections.py  document_indexing.py  k8s_secrets.py  linear_probe.py  milvus_admin.py  nvcf_file_based_secrets_manager.py  pipelines.py  search.py  search_refinement.py
src/wrappers/: __init__.py  gunicorn_wrapper.py  pytest_wrapper.py  streamlit_wrapper.py  triton_entrypoint.py  uvicorn_wrapper.py
(+25 files in other folders)
